[package]
name = "hedera-proto"
version = "0.2.0"
authors = ["LaunchBadge <contact@launchbadge.com>"]
edition = "2018"

[dependencies]
tonic = { version = "0.6.2", features = ["prost"] }
serde = { version="1.0.126", features=["derive"], optional = true }
prost = "0.9.0"
tokio = { version="1.8.0", features=["full"] }
chrono = { version="0.4.19", optional = true }

[build-dependencies]
tonic-build = "0.6.2"
anyhow = "1.0.41"

[dev-dependencies]
anyhow = "1.0.41"
