[package]
name = "hedera-proto"
version = "0.2.0"
authors = ["LaunchBadge <contact@launchbadge.com>"]
edition = "2018"

[dependencies]
tonic = { version = "0.7.1", features = ["prost"] }
serde = { version="1.0.126", features=["derive"], optional = true }
prost = "0.10.0"
tokio = { version="1.18.5", features=["full"] }
chrono = { version="0.4.19", optional = true }

[build-dependencies]
tonic-build = "0.7.0"
anyhow = "1.0.56"

[dev-dependencies]
anyhow = "1.0.56"
